scrollbar issue

--- a/themes/documentation/source/css/_partial/header.scss
+++ b/themes/documentation/source/css/_partial/header.scss
@@ -14,6 +14,11 @@
 
     &-open {
       overflow: hidden;
+      padding-right: 15px;
+
+      .header {
+        padding-right: 15px;
+      }
     }
 
     &-btn {
@@ -22,6 +27,21 @@
       margin-right: 25px;
       font-size: 20px;
       cursor: pointer;
+      display: none;
+
+      @media (min-width: 916px) {
+        display: block;
+      }
+    }
+
+    &-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      outline: 0;
+      background: rgba(0,0,0,0.5);
     }
 
     &-panel {
